--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           <h2>At a Glance</h2>
         </div>
         <ul>
-          <li><strong>Email:</strong> <a href="mailto:jeremy@johnsonwall.com">jeremy@johnsonwall.com</a></li>
+          <li><strong>Email:</strong> <a href="mailto:jjohn73@clemson.edu">jjohn73@clemson.edu</a></li>
           <li><strong>GitHub:</strong> <a href="https://github.com/MediculousCodes">MediculousCodes</a></li>
           <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/jeremyjohnsonwall">jeremyjohnsonwall</a></li>
           <li><strong>Location:</strong> South Carolina, USA</li>
@@ -165,11 +165,8 @@
           <span class="pill">MySQL</span>
           <span class="pill">REST</span>
           <span class="pill">ASP.NET</span>
-          <span class="pill">React</span>
-          <span class="pill">Blazor</span>
-          <span class="pill">Docker</span>
           <span class="pill">AWS</span>
-          <span class="pill">Azure</span>
+          <span class="pill">ServiceNow</span>
         </div>
       </aside>
     </section>
@@ -186,21 +183,22 @@
           <div class="role">ServiceNow Administrator Intern <span class="org">— LPL Financial</span></div>
           <ul>
             <li>Built and enhanced Service Catalog items, workflows, and dashboards; supported Yokohama upgrade analysis.</li>
-            <li>Generated reports for Problem Management and University Recruitment; earned ServiceNow CSA credential.</li>
+            <li>Generated reports for Problem Management and University Recruitment; earned ServiceNow System Admin credential.</li>
           </ul>
         </div>
-        <div class="date">Summer</div>
+        <div class="date">Summer 2025</div>
       </div>
 
       <div class="item">
         <div>
-          <div class="role">IT Support / Developer <span class="org">— Clemson CCIT</span></div>
+          <div class="role">Executive IT Support <span class="org"> Clemson University</span></div>
           <ul>
-            <li>Assisted campus operations across ServiceNow, automation scripts, and user support in a fast‑paced environment.</li>
-            <li>Collaborated with student teams and staff on tooling that improved workflow clarity and response times.</li>
+            <li>Supported the day-to-day IT needs of Clemson Executives and Administraors</li>
+            <li>Deployed 300+ laptops and built automatic printer installation scripts so 1,500 devices.</li>
+            <li>Built cross-department connections to ensure I could deliver the best solution to any problem.</li>
           </ul>
         </div>
-        <div class="date">Multi‑year</div>
+        <div class="date">2022-2025</div>
       </div>
     </section>
 
@@ -225,20 +223,6 @@
             <span class="pill">React</span><span class="pill">Node</span><span class="pill">PostgreSQL</span>
           </div>
         </article>
-        <article class="project">
-          <h3>Neural Flower ID</h3>
-          <p>Image classification with k‑fold validation; focused on clean pipelines and reproducible experiments.</p>
-          <div class="stack">
-            <span class="pill">Python</span><span class="pill">PyTorch</span><span class="pill">ML Ops (basic)</span>
-          </div>
-        </article>
-        <article class="project">
-          <h3>Ticketing System (Sample)</h3>
-          <p>ASP.NET + Blazor + REST API demo app showcasing CRUD, auth, and layered architecture.</p>
-          <div class="stack">
-            <span class="pill">ASP.NET</span><span class="pill">Blazor</span><span class="pill">REST</span>
-          </div>
-        </article>
       </div>
     </section>
 
@@ -253,7 +237,7 @@
             <div class="role">B.S. Computer Science <span class="org">— Clemson University</span></div>
             <ul>
               <li>Coursework: Data Structures, Algorithms, Databases, Software Engineering, Cloud, ML.</li>
-              <li>Activities: Capstone TA, team projects, rowing & campus life.</li>
+              <li>Activities: Capstone TA, team projects, rowing & campus ministry.</li>
             </ul>
           </div>
           <div class="date">—</div>
@@ -267,7 +251,7 @@
           <li>CompTIA A+ (2024)</li>
           <li>Google IT Support (2024)</li>
           <li>Google Cloud: Data Analytics (2024)</li>
-          <li>ServiceNow Certified System Administrator</li>
+          <li>ServiceNow Certified System Administrator (2025)</li>
         </ul>
       </aside>
     </section>
@@ -280,7 +264,7 @@
       </div>
       <ul>
         <li>Eagle Scout — service‑oriented, organized, and reliable.</li>
-        <li>Experience with AWS (Bedrock, Amplify, EC2, Lambda) and Azure; comfortable with Docker and CI basics.</li>
+        <li>Experience with AWS (Bedrock, Amplify, EC2, Lambda); comfortable with Docker and CI basics.</li>
         <li>Clear written and verbal communication; I enjoy mentoring peers and documenting work.</li>
       </ul>
     </section>
@@ -301,4 +285,5 @@
   </script>
 </body>
 </html>
+
 
