--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
       <div class="item">
         <div>
-          <div class="role">ServiceNow Administrator Intern <span class="org">— LPL Financial</span></div>
+          <div class="role">ServiceNow Administrator<span class="org">— LPL Financial</span></div>
           <ul>
             <li>Built and enhanced Service Catalog items, workflows, and dashboards; supported Yokohama upgrade analysis.</li>
             <li>Generated reports for Problem Management and University Recruitment; earned ServiceNow System Admin credential.</li>
@@ -191,7 +191,7 @@
 
       <div class="item">
         <div>
-          <div class="role">Executive IT Support <span class="org"> Clemson University</span></div>
+          <div class="role">Executive IT Support <span class="org">— Clemson University</span></div>
           <ul>
             <li>Supported the day-to-day IT needs of Clemson Executives and Administraors</li>
             <li>Deployed 300+ laptops and built automatic printer installation scripts so 1,500 devices.</li>
@@ -237,10 +237,21 @@
             <div class="role">B.S. Computer Science <span class="org">— Clemson University</span></div>
             <ul>
               <li>Coursework: Data Structures, Algorithms, Databases, Software Engineering, Cloud, ML.</li>
-              <li>Activities: Capstone TA, team projects, rowing & campus ministry.</li>
+              <li>Activities: Club Rowing & Campus Ministry.</li>
             </ul>
           </div>
-          <div class="date">—</div>
+          <div class="date">2022-2025</div>
+        </div>
+        <div class="item">
+          <div>
+            <div class="role">M.S. Computer Science <span class="org">— Clemson University</span></div>
+            <ul>
+              <li>Concentration: Artificial Intelligence & Machine Learning</li>
+              <li>Graduate Coursework: Advanced Machine Learning, Deep Learning, Statistical Computing</li>
+              <li>Activities: Capstone TA, Club Rowing & Campus Ministry.</li>
+            </ul>
+          </div>
+          <div class="date">2025–2026</div>
         </div>
       </article>
       <aside class="card col-4">
@@ -285,5 +296,6 @@
   </script>
 </body>
 </html>
+
 
 
