Revise resume HTML structure and content

--- a/index.html
+++ b/index.html
@@ -180,6 +180,18 @@
 
       <div class="item">
         <div>
+          <div class="role">Graduate Teaching Assistant — Strategic Industry Partnerships <span class="org">Clemson University</span></div>
+            <ul>
+              <li>Mentor high‑performing student teams in the Capstone Program under Professor Carrie Russell, Director of Strategic Industry Partnerships.</li>
+              <li>Guide semester‑long projects with corporate partners including <strong>TD SYNNEX</strong>, <strong>NVIDIA</strong>, and <strong>Capgemini</strong>.</li>
+              <li>Coach teams on design reviews, stakeholder communication, agile delivery, and final presentations.</li>
+            </ul>
+          </div>
+        <div class="date">Aug 2025 – Present</div>
+      </div>
+      
+      <div class="item">
+        <div>
           <div class="role">ServiceNow Administrator<span class="org">— LPL Financial</span></div>
           <ul>
             <li>Built and enhanced Service Catalog items, workflows, and dashboards; supported Yokohama upgrade analysis.</li>
@@ -296,6 +308,7 @@
   </script>
 </body>
 </html>
+
 
 
 
