--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <header class="hero" role="banner">
       <span class="eyebrow" aria-label="current role">Masters Student • Computer Science</span>
       <h1>Jeremy Johnsonwall</h1>
-      <p class="tagline">Machine Learning • AI. • Data Science • AWS • ServiceNow</p>
+      <p class="tagline">Machine Learning • AI • Data Science • AWS • ServiceNow</p>
       <div class="buttons" role="navigation" aria-label="primary">
         <a class="btn" href="mailto:jeremy@johnsonwall.com" aria-label="Email Jeremy">✉️ Email</a>
         <a class="btn" href="https://github.com/MediculousCodes" aria-label="GitHub profile">💻 GitHub</a>
@@ -308,6 +308,7 @@
   </script>
 </body>
 </html>
+
 
 
 
