--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
       <div class="item">
         <div>
-          <div class="role">Graduate Teaching Assistant — Strategic Industry Partnerships <span class="org">Clemson University</span></div>
+          <div class="role">Graduate Teaching Assistant<span class="org">— Strategic Industry Partnerships for Clemson University</span></div>
             <ul>
               <li>Mentor high‑performing student teams in the Capstone Program under Professor Carrie Russell, Director of Strategic Industry Partnerships.</li>
               <li>Guide semester‑long projects with corporate partners including <strong>TD SYNNEX</strong>, <strong>NVIDIA</strong>, and <strong>Capgemini</strong>.</li>
@@ -308,6 +308,7 @@
   </script>
 </body>
 </html>
+
 
 
 
