--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     <section class="card" aria-label="projects">
       <div class="section-title">
         <h2>Selected Projects</h2>
-        <span class="subtle">Built & shipped</span>
+       <!-- <span class="subtle">Built & shipped</span>-->
       </div>
       <div class="projects">
         <article class="project">
@@ -308,6 +308,7 @@
   </script>
 </body>
 </html>
+
 
 
 
