--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
           <div class="role">ServiceNow Administrator <span class="org">— LPL Financial</span></div>
           <ul>
             <li>Built and enhanced Service Catalog items, workflows, and dashboards; supported Yokohama upgrade analysis.</li>
-            <li>Generated reports for Problem Management and University Recruitment; earned ServiceNow System Admin credential.</li>
+            <li>Generated reports for Problem Management and University Recruitment; earned ServiceNow System Administrator credential.</li>
           </ul>
         </div>
         <div class="date">Summer 2025</div>
@@ -205,8 +205,8 @@
         <div>
           <div class="role">Executive IT Support <span class="org">— Clemson University</span></div>
           <ul>
-            <li>Supported the day-to-day IT needs of Clemson Executives and Administraors</li>
-            <li>Deployed 300+ laptops and built automatic printer installation scripts so 1,500 devices.</li>
+            <li>Supported the day-to-day IT needs of Clemson Executives and Administraors.</li>
+            <li>Deployed 300+ laptops and built automatic printer installation scripts for 1,500 devices.</li>
             <li>Built cross-department connections to ensure I could deliver the best solution to any problem.</li>
           </ul>
         </div>
@@ -309,6 +309,7 @@
   </script>
 </body>
 </html>
+
 
 
 
